<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_createRecipe"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/title_notifications" />

    <item android:id="@+id/navigation_setting"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_setting" />

</menu>