<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/homeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/italiana"
        android:text="@string/app_name"
        android:textColor="@color/primary_color"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeNotificationBtn"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_notifications_24"
        app:layout_constraintEnd_toStartOf="@+id/homeAddBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/homeAppName"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/mainText_color" />

    <ImageButton
        android:id="@id/homeAddBtn"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/mainText_color" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_light"
        android:text="Discover your recipe!"
        android:textColor="@color/mainText_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeAppName" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title"
        android:id="@+id/home_cat_list"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10sp"
            android:paddingVertical="5sp"
            >

            <Button
                android:id="@+id/home_cat_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_category_btn"
                android:fontFamily="@font/inter"
                android:text="@string/cat_all"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/home_cat_fitness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_category_btn"
                android:fontFamily="@font/inter"
                android:text="@string/cat_fitness"
                android:textSize="16sp" />

            <Button
                android:id="@+id/home_cat_jp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_category_btn"
                android:fontFamily="@font/inter"
                android:text="@string/cat_japanese"
                android:textSize="16sp" />

            <Button
                android:id="@+id/home_cat_italian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_category_btn"
                android:fontFamily="@font/inter"
                android:text="@string/cat_italian"
                android:textSize="16sp" />

            <Button
                android:id="@+id/home_cat_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_category_btn"
                android:fontFamily="@font/inter"
                android:text="@string/cat_more"
                android:textSize="16sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/home_pop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_semibold"
        android:text="Popular Dishes"
        android:textColor="@color/mainText_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_cat_list" />

    <Button
        android:id="@+id/home_view_pop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/view_more"
        android:textColor="@color/Secondary_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/home_pop_title"
        app:layout_constraintTop_toBottomOf="@+id/home_cat_list" />

    <HorizontalScrollView
        android:id="@+id/home_pop_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="411dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_pop_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>


    </HorizontalScrollView>

    <TextView
        android:id="@+id/home_explore_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/inter_semibold"
        android:text="Explore Dishes"
        android:textColor="@color/mainText_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_pop_list" />

    <Button
        android:id="@+id/home_view_explore_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/view_more"
        android:textColor="@color/Secondary_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toEndOf="@+id/home_explore_title"
        app:layout_constraintTop_toBottomOf="@+id/home_pop_list"/>

    <HorizontalScrollView
        android:id="@+id/home_explore_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="411dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_explore_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>


    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>